// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`GET /entities (fetch view models)- all entities published when querying for view models for entity of type tag when an id is not provided ?type=tag (fetching many view models) - all entities published should fetch multiple entities of type tag 1`] = `
Array [
  Object {
    "id": "0",
    "text": "plants",
  },
  Object {
    "id": "1",
    "text": "animals",
  },
  Object {
    "id": "2",
    "text": "placenames",
  },
  Object {
    "id": "3",
    "text": "songs",
  },
  Object {
    "id": "4",
    "text": "legends",
  },
]
`;

exports[`GET /entities (fetch view models)- all entities published when querying for view models for entity of type term when an id is not provided ?type=term (fetching many view models) - all entities published should fetch multiple entities of type term 1`] = `
Array [
  Object {
    "contributor": "",
    "id": "1",
    "isPublished": true,
    "term": "Chil-term-1",
    "termEnglish": "Engl-term-1",
  },
  Object {
    "contributor": "",
    "id": "2",
    "isPublished": true,
    "term": "Chil-term-2",
    "termEnglish": "Engl-term-2",
  },
  Object {
    "contributor": "",
    "id": "3",
    "isPublished": true,
    "term": "Chil-term-no-english",
  },
]
`;

exports[`GET /entities (fetch view models)- all entities published when querying for view models for entity of type vocabularyList when an id is not provided ?type=vocabularyList (fetching many view models) - all entities published should fetch multiple entities of type vocabularyList 1`] = `
Array [
  Object {
    "entries": Array [
      Object {
        "term": Object {
          "contributor": "",
          "id": "1",
          "isPublished": true,
          "term": "Chil-term-1",
          "termEnglish": "Engl-term-1",
        },
        "variableValues": Object {
          "person": "11",
        },
      },
      Object {
        "term": Object {
          "contributor": "",
          "id": "2",
          "isPublished": true,
          "term": "Chil-term-2",
          "termEnglish": "Engl-term-2",
        },
        "variableValues": Object {
          "person": "21",
        },
      },
    ],
    "id": "vocabulary-list-id-1",
    "isPublished": true,
    "name": "test VL 1 chil",
    "nameEnglish": "test VL 1 engl",
    "variables": Array [
      Object {
        "name": "person",
        "type": "dropbox",
        "validValues": Array [
          Object {
            "display": "I",
            "value": "11",
          },
          Object {
            "display": "We",
            "value": "21",
          },
        ],
      },
    ],
  },
  Object {
    "entries": Array [
      Object {
        "term": Object {
          "contributor": "",
          "id": "2",
          "isPublished": true,
          "term": "Chil-term-2",
          "termEnglish": "Engl-term-2",
        },
        "variableValues": Object {
          "person": "23",
        },
      },
    ],
    "id": "vocabulary-list-id-2",
    "isPublished": true,
    "name": "test VL 2 CHIL- no engl name",
    "variables": Array [],
  },
]
`;
